--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title> Hyperdimensional Tictactoe </title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" type="image/png" href="favicon.png">
+        <script src="script.js"></script>
     </head>
-
     <body>
         Nothing exists yet
     </body>
