--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title> Hyperdimensional Tictactoe </title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="icon" type="image/png" href="favicon.png">
-        <script src="script.js"></script>
+        <link rel="stylesheet" type="text/css" href="tictactoe/style.css">
+        <link rel="icon" type="image/png" href="tictactoe/favicon.png">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js" integrity="sha512-3RlxD1bW34eFKPwj9gUXEWtdSMC59QqIqHnD8O/NoTwSJhgxRizdcFVQhUMFyTp5RwLTDL0Lbcqtl8b7bFAzog==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="tictactoe/script.js"></script>
     </head>
     <body>
-        Nothing exists yet
+        
     </body>
 </html>
