--- a/pages/tictactoe/index.html
+++ b/pages/tictactoe/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> Hyperdimensional Tictactoe </title>
+        <meta name="viewport" content="width=device-width, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="tictactoe/style.css">
         <link rel="icon" type="image/png" href="tictactoe/favicon.png">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js" integrity="sha512-3RlxD1bW34eFKPwj9gUXEWtdSMC59QqIqHnD8O/NoTwSJhgxRizdcFVQhUMFyTp5RwLTDL0Lbcqtl8b7bFAzog==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
